@@ -7,7 +7,9 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                 sh 'mvn -T 4C clean package -Dmaven.javadoc.skip=true -Dmaven.compile.fork=true -Dmaven.junit.fork=true -DskipTests'
+            withMaven(mavenOpts: "-Xverify:none -Xmx2500m -XX:+TieredCompilation -XX:TieredStopAtLevel=1") {
+                sh 'mvn clean package -Dmaven.javadoc.skip=true -Dmaven.compile.fork=true -Dmaven.junit.fork=true -DskipTests'
+                }
                 archiveArtifacts artifacts: 'forms/target/forms*.jar', fingerprint: true
             }
         }
